--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "typescript": "^4.8.4",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "web3": "^1.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +40,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/bootstrap": "^5.2.5",
+    "@types/react-bootstrap": "^0.32.31",
+    "bootstrap": "^5.2.2",
+    "react-bootstrap": "^2.5.0"
   }
 }
